[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascade-backup-utils"
version = "0.1.0"
description = "A utility to backup and consolidate Cascade AI conversations from the Windsurf IDE. Prevents data loss by safely storing conversations as markdown files and provides tools to manage and consolidate multiple backups efficiently."
readme = "README.md"
authors = [{ name = "Dipak Saraf", email = "hello@dipaksaraf.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Environment :: Console",
]
keywords = ["cascade", "backup", "windsurf", "codeium", "conversation", "markdown", "consolidation", "archiving"]
dependencies = [
    "pyautogui",
    "pyperclip",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/dipaksaraf/cascade-backup-utils"
Repository = "https://github.com/dipaksaraf/cascade-backup-utils.git"

[project.scripts]
cascade-backup = "cascade_backup_utils.__main__:backup_main"
cascade-consolidate = "cascade_backup_utils.__main__:consolidate_main"
