[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cascade-backup-utils"
version = "0.1.0"
description = "A utility to backup and consolidate Cascade AI conversations from the Windsurf IDE"
readme = "README.md"
authors = [{ name = "Dipak Saraf", email = "hello@dipaksaraf.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "Pillow>=10.0.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/dipaksaraf/cascade-backup-utils"
Repository = "https://github.com/dipaksaraf/cascade-backup-utils.git"

[project.scripts]
cascade-backup = "cascade_backup_utils.__main__:backup_main"
cascade-consolidate = "cascade_backup_utils.__main__:consolidate_main"

[tool.setuptools.packages.find]
include = ["cascade_backup_utils*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "--cov=cascade_backup_utils --cov-report=xml -v"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
