[metadata]
name = cascade-backup-utils
version = 0.1.0
author = Dipak Saraf
author_email = hello@dipaksaraf.com
description = A utility to backup and consolidate Cascade AI conversations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dipaksaraf/cascade-backup-utils
project_urls =
    Bug Tracker = https://github.com/dipaksaraf/cascade-backup-utils/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    pyautogui>=0.9.54
    pyperclip>=1.8.2

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    cascade-backup = cascade_backup_utils.__main__:backup_main
    cascade-consolidate = cascade_backup_utils.__main__:consolidate_main
